--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,8 @@ h2 {
 }
 
 #game-board {
-    width: 50vw;
-    height: 50vw;
+    width: 400px;
+    height: 400px;
     background-color: var(--light-accent);
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
  
