--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,8 @@ h2 {
 
     border: 5px var(--dark-background) solid;
     border-radius: 1rem;
+
+    opacity: 100%; /* This animates to show the board when game starts */
 }
 
 .board-cell {
