--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 :root {
     
     --dark-background: #4A4E69;
+    --darker-background: #2a2d3d;
     
     --medium-background: #4a4e6909;
     
@@ -46,16 +47,29 @@ h2 {
     padding-bottom: 1rem;
 }
 
+h4 {
+    font-size: 1.5rem;
+}
+
 .play-area {
+    width: 100vw;
+    height: 100%;
+    
     padding-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 25% 400px 25%;
+    grid-template-rows: 400px 1fr;
+    gap: 1rem;
+    justify-content: center;
 }
 
 #game-board {
-    width: 400px;
-    height: 400px;
+    grid-row: 1/2;
+    grid-column: 2/3;
+    box-sizing: border-box;
+    justify-self: center;
+    width: 100%;
+    height: 100%;
     background-color: var(--light-accent);
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
  
@@ -68,7 +82,7 @@ h2 {
     border: 5px var(--dark-background) solid;
     border-radius: 1rem;
 
-    opacity: 100%; /* This animates to show the board when game starts */
+    opacity: 30%; /* This animates to show the board when game starts */
 }
 
 .board-cell {
@@ -82,4 +96,99 @@ h2 {
 
 .board-cell:hover {
     background-color: var(--medium-background);
+}
+
+.control-panel{
+    justify-content: stretch;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.control-panel > div {
+    padding: 1rem;
+    background-color: var(--dark-background);
+    border-radius: 1rem;
+    color: var(--light-background);
+}
+
+#current-player{
+    background-color: var(--medium-background);
+}
+
+#reset-game {
+    padding: 1rem;
+    background-color: var(--dark-background); 
+    border-radius: 1rem;
+    border: none;
+    color: var(--light-background);
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+#reset-game:hover {
+    background-color: var(--darker-background);
+}
+
+.player-config {
+    background-color: var(--dark-background);
+    border-radius: 1rem;
+    padding: 1rem;
+    color: var(--light-background);
+}
+
+.player-config > h2 {
+    color: var(--light-background);
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+form > div {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    padding-bottom: 4px;
+}
+
+input {
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: none;
+}
+
+#player1-menu {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+#player1-menu {
+   grid-template-columns: 3/4;
+   grid-row: 1/2; 
+}
+
+form > button {
+    margin-top: 1rem;
+    padding: 0.3rem;
+    background-color: var(--light-background); 
+    border-radius: 0.5rem;
+    border: none;
+    color: var(--dark-background);
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+form > button:hover {
+    background-color: var(--light-accent); 
 }
